--- a/Main_movie_page.ipynb
+++ b/Main_movie_page.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b95bd807",
    "metadata": {},
    "outputs": [],
@@ -11,11 +11,19 @@
     "movie_df_all = pd.read_csv('imdb_top250_movies.csv') \n",
     "movie_df = movie_df_all.drop(columns = 'Website')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a57d998c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.8 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -30,6 +38,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "bf70c2be34cefc8925ac37ac24c67051bedf097ccd73ad491733282b57292c88"
+   }
   }
  },
  "nbformat": 4,
